--- a/template/public/index.html
+++ b/template/public/index.html
@@ -3,8 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <title>React Docker App</title>
-  </head>
-  <body>
-    <div id="root"></div>
+      <link rel="stylesheet" href="/styles.css" />
+    </head>
+    
+    <body>
+      <div id="root"></div>
+      <script type="module" src="/src/index.jsx"></script>
   </body>
 </html>
+
