--- a/template/public/index.html
+++ b/template/public/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <title>React Docker App</title>
       <link rel="stylesheet" href="/styles.css" />
+      <link rel="stylesheet" href="/contact-card.css" />
     </head>
     
     <body>
