[Refactoring] index.html and component files: reorganized styles and component imports.

--- a/template/public/index.html
+++ b/template/public/index.html
@@ -3,8 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <title>React Docker App</title>
-      <link rel="stylesheet" href="/styles.css" />
-      <link rel="stylesheet" href="/contact-card.css" />
+      <link rel="stylesheet" href="/styles/main.css" />
+      <link rel="stylesheet" href="/styles/contact-card.css" />
+      <link rel="stylesheet" href="/styles/note.css" />
     </head>
     
     <body>
