--- a/template/public/styles/main.css
+++ b/template/public/styles/main.css
@@ -25,11 +25,10 @@ header h1 {
 }
 
 footer {
-  position: absolute;
   text-align: center;
-  bottom: 0;
   width: 100%;
   height: 2.5rem;
+  margin-top: auto;
 }
 
 footer p {
