--- a/template/public/index.html
+++ b/template/public/index.html
@@ -2,17 +2,15 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>React Docker App</title>
-      <link rel="stylesheet" href="/styles/main.css" />
-      <link rel="stylesheet" href="/styles/contact-card.css" />
-      <link rel="stylesheet" href="/styles/note.css" />
-    </head>
-    
-    <body>
-      <div id="root"></div>
-      <!-- Leaving below script import causes errors
-        Just omit or delete index.js imports -->
-      <!-- <script type="module" src="/src/index.js"></script> -->
+    <title>Vite React Docker App</title>
+    <link rel="icon" href="/favicon-vite.ico" />
+    <link rel="stylesheet" href="/styles/main.css" />
+    <link rel="stylesheet" href="/styles/contact-card.css" />
+    <link rel="stylesheet" href="/styles/note.css" />
+  </head>
+
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/index.jsx"></script>
   </body>
 </html>
-
